added whatido content and resume

--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
         <section class="about">
         <h3 class="section-title">About Me</h3>
         <p class="section-des">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+
         <div class="about-info-container">
            <div class="about-info">
+            <!-- div.about-info*4>p.info-title+p.info-des -->
             <p class="info-title">Name:</p>
             <p class="info-des">Mary Hardy</p>
            </div>
@@ -53,6 +55,38 @@
             <p class="info-des">Los Angels,USA</p>
            </div>
         </div>
+        </section>
+        <!-- What I do section -->
+        <section class="what-i-do">
+            <h3 class="section-title">What I Do</h3>
+            <!-- .skills-container>.skill*4>img+p.skill-title+p.skill-des>lorem15 -->
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="skill-title">Vanilla Javascript</p>
+                    <p class="skill-des">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur voluptatibus accusamus incidunt asperiores officiis perspiciatis!</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <p class="skill-title">React</p>
+                    <p class="skill-des">Minima ipsa alias ullam earum, expedita laborum ex, cum dolores nam ipsam dolore ducimus aperiam?</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <p class="skill-title">node js</p>
+                    <p class="skill-des">Cum sit fugit placeat cupiditate ipsa maxime iste fugiat voluptatum, sequi dignissimos! Soluta, consectetur! Quasi.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skill-title">Mongo DB</p>
+                    <p class="skill-des">Ipsam consectetur repellendus possimus, eum laborum aliquid totam nesciunt quidem amet magni, voluptatum dignissimos nulla!</p>
+                </div>
+            </div>
+        </section>
+        <!-- resume section -->
+        <section class="resume">
+            <h3 class="section-title">A summary of My Resume</h3>
+
         </section>
 
     </main>
